# midi-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: midi-dump.c
include/: midi-parser.h
src/: midi-dump.c  midi-parser.c
